Fixing comments and formatting.

--- a/website/index.html
+++ b/website/index.html
@@ -6,10 +6,6 @@
       <title>The Tocumwal Houses Archive</title>
       <link rel="stylesheet" type="text/css" href="assets/css/normalize.css">
       <link rel="stylesheet" type="text/css" href="assets/css/styles.css">
-      <!-- 
-         https://css-tricks.com/snippets/html/responsive-meta-tag/
-         Render the page at the width of its own screen.    
-         -->
       <meta name="viewport" content="width=device-width">
       <link rel="icon" type="image/png" href="assets/images/icon.png">
    </head>
@@ -29,7 +25,6 @@
       </header>
       <main>
          <!-- Hero image -->
-         <!-- <div class="hero-image" role="img" aria-label="A wide shot of the Tocumwal houses in black and white" Title="Welcome to the Tocumwal Houses Archive"> -->
          <div class="hero-image" aria-hidden="true">
             <div class="hero-text">
                <div id="welcome-wrapper">
@@ -75,9 +70,8 @@
                </section>
             </div>
          </div>
-         <!-- End of into content -->
+         <!-- End of intro content -->
          <!-- Second parallax scrolling image -->
-         <!-- <div id="Stories" class="parallax-image2" role="img" aria-label="A wide shot of a house from the Tocumwal Archive" title="Tocumwal Stories from the ACT Heritage Library"> -->
          <div id="Stories" class="parallax-image2" aria-hidden="true">
             <div class="stories-text">
                <div id="stories-wrapper">
@@ -147,7 +141,7 @@
             </div>
          </div>
          <!-- End of middle content -->
-         <!-- Contact From -->
+         <!-- Contact form -->
          <div class="contact-background" id="Contact">
             <header>
                <h1 class="contact-heading">Message us your questions!</h1>
