More unique id.

--- a/website/index.html
+++ b/website/index.html
@@ -190,10 +190,10 @@
                               />
                         </div>
                         <div class="form-spacing">
-                           <label for="contact" class="form-field">Your questions (required)<span class="required" title="This field is required.">*</span></label>
+                           <label for="questions" class="form-field">Your questions (required)<span class="required" title="This field is required.">*</span></label>
                            <textarea
                               name="contact_questions"
-                              id="contact"
+                              id="questions"
                               class="form-area"
                               maxlength="500"
                               placeholder="Enter your questions (500 character limit)."
