--- a/website/index.html
+++ b/website/index.html
@@ -32,7 +32,7 @@
                </div>
             </div>
          </div>
-         <!-- Flex container for into -->
+         <!-- Flex container for introduction -->
          <div class="flex-container1" id="ContentStart">
             <!-- Left content -->
             <div>
@@ -212,7 +212,7 @@
                </div>
             </section>
          </div>
-         <!-- End of contact From -->
+         <!-- End of contact form -->
       </main>
       <!-- Footer -->
       <div class="footer-background">
